# AQUA_ATTENDANCE

./: .gitignore  Cargo.toml  Dockerfile  fly.toml
aquatallyon/: .gitignore  Cargo.toml
aquatallyon/src/: main.rs  types.rs
src/: handlers.rs  main.rs  types.rs
