[package]
name = "aquatallyon"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.43"
